Fixed scroll on mobile

--- a/styles.css
+++ b/styles.css
@@ -634,6 +634,7 @@ header {
   margin-top: 0.5rem;
   margin-bottom: 0.5rem;
   -webkit-overflow-scrolling: touch; /* iOS momentum scroll */
+  overscroll-behavior: contain;
   scroll-behavior: smooth;
   opacity: 0;
   margin-top: 0;
